src/datafusion-local/src/tests/snapshots/liquid_cache_local__tests__os_selection.snap
---
source: src/datafusion-local/src/tests/mod.rs
expression: "format!(\"plan: \\n{}\\nvalues: \\n{}\\nstats:\\n{}\", plan, values, stats)"
---
plan: 
┌───────────────────────────┐
│          SortExec         │
│    --------------------   │
│         OS@0 DESC         │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       DataSourceExec      │
│    --------------------   │
│          files: 1         │
│                           │
│          format:          │
│       liquid_parquet      │
└───────────────────────────┘

values: 
+----+
| OS |
+----+
| 44 |
| 44 |
| 44 |
| 44 |
| 44 |
| 2  |
| 2  |
| 2  |
| 2  |
| 2  |
| 2  |
+----+
stats:
entries.total: 8
entries.after_first_run: 8
entries.memory.arrow: 3
entries.memory.liquid: 4
entries.memory.squeezed_liquid: 1
entries.disk.liquid: 0
entries.disk.arrow: 0
usage.memory_bytes: 957663
usage.disk_bytes: 159224
RuntimeStatsSnapshot:
  get: 3
  get_with_selection: 3
  eval_predicate: 4
  get_squeezed_success: 0
  get_squeezed_needs_io: 1
  try_read_liquid_calls: 0
  hit_date32_expression_calls: 0
  read_io_count: 1
  write_io_count: 0
  eval_predicate_on_liquid_failed: 0
  squeezed_decompressed_count: 2141
  squeezed_total_count: 2164
  squeeze_io_saved: 0
